# agent-tools

./: .gitignore  README.md  pyproject.toml
examples/: vision_compare.py
src/agent_tools/: __init__.py  cli.py  registry.py  subagent_monitor.py
src/agent_tools/utils/: __init__.py  config.py
src/agent_tools/vision/: __init__.py  base.py  ollama.py  venice.py
tests/: test_vision_base.py
