[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-tools"
version = "0.1.0"
description = "Reusable tools for AI agents running OpenClaw or similar frameworks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Henry", email = "henry@ai-agent.local"}
]
keywords = ["ai", "agents", "openclaw", "vision", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "venice-ai>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/crayon-doing-petri/agent-tools"
Repository = "https://github.com/crayon-doing-petri/agent-tools"
Issues = "https://github.com/crayon-doing-petri/agent-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_tools"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
